<resources>
    <string name="app_name">MyNote</string>
    <string name="bnv_menu_home">홈</string>
    <string name="bnv_menu_place_note">장소노트</string>
    <string name="bnv_menu_purchase_note">구매노트</string>
    <string name="bnv_menu_my_page">마이페이지</string>

    <string name="make_purchase_note">구매노트 작성</string>
    <string name="empty">내용이 없어요</string>
    <string name="product_title">물건명</string>
    <string name="select_location">장소 검색</string>
    <string name="search_place">장소 검색</string>
    <string name="hint_input_place_or_address">장소명 혹은 주소 입력</string>
    <string name="show_list">목록보기</string>
    <string name="nothing_result">검색 결과가 없어요</string>
    <string name="select">선택</string>
    <string name="purchase_place">구매 장소</string>
    <string name="visit_place">방문 장소</string>
    <string name="search_purchase_place">구매 장소 검색</string>
    <string name="search_visit_place">방문 장소 검색</string>
    <string name="visit_date">방문 날짜</string>
    <string name="purchase_date">구매 날짜</string>
    <string name="select_purchase_date">구매 날짜 선택</string>
    <string name="select_visit_date">방문 날짜 선택</string>
    <string name="purchase_price">구매 금액</string>

    <string name="format_full_date">%1$s (%2$s)</string>
    <string name="format_plus_value">+%1$d</string>
    <string name="format_slash">%1$d/%2$d</string>
    <string name="format_slash_with_space">%1$d / %2$d</string>
    <string name="format_won">%1$s원</string>
    <string name="format_total_purchase_price">총 지출 금액: %1$s원</string>
    <string name="format_total_count">전체 %1$d</string>
    <string name="format_start_date_until_end_date">%1$s ~ %2$s</string>
    <string name="format_won_below">%1$s원 이하</string>
    <string name="format_won_up">%1$s원 이상</string>
    <string name="format_min_price_until_max_price">%1$s원 ~ %2$s원</string>
    <string name="format_total_count_with_unit">총 %1$d건이고,</string>
    <string name="format_total_price">총 금액은 %1$s원이에요!</string>
    <string name="format_purchase_note_with_number">구매노트 %1$d</string>

    <string name="input_title">제목 입력하기</string>
    <string name="input_contents">내용 입력하기</string>
    <string name="msg_created_place_note">장소 노트 작성이 완료되었어요!</string>
    <string name="empty_my_places_will_you_add">등록된 장소노트가 없어요.\n장소를 추가해보세요!</string>
    <string name="make_place_note">장소노트 작성</string>
    <string name="edit_place_note">장소노트 수정</string>
    <string name="my_product">내 물건</string>
    <string name="view_all">전체보기</string>
    <string name="do_save">저장하기</string>
    <string name="do_modify">수정하기</string>
    <string name="do_delete">삭제하기</string>
    <string name="confirm">확인</string>
    <string name="will_you_delete">정말로 삭제하시겠어요?</string>
    <string name="yes_i_will_delete">예, 삭제할게요</string>
    <string name="cancel">취소할래요</string>
    <string name="do_watch_map">지도 보기</string>
    <string name="do_find_road">가는 길 보기</string>
    <string name="navigation">내비게이션</string>
    <string name="do_start_navi">길 안내 시작하기</string>
    <string name="deleted_place_note">삭제된 장소노트에요!</string>
    <string name="hint_input_place_or_region">장소명 혹은 지역을 입력해주세요</string>
    <string name="nothing_search_results">검색 결과가 없습니다.</string>
    <string name="hint_input_purchase_price">구매 금액 입력</string>
    <string name="category">카테고리</string>
    <string name="empty_purchase_note_make_note">등록된 구매노트가 없어요.\n노트를 추가해보세요!</string>
    <string name="title_input_category_for_add">카테고리명을 입력해주세요</string>
    <string name="do_add">추가하기</string>
    <string name="do_cancel">취소하기</string>
    <string name="title_input_category_for_edit">수정할 카테고리명을 입력해주세요</string>
    <string name="title_will_you_delete_category">카테고리를 삭제하시겠어요?</string>
    <string name="hint_input_purchase_name">구매명 입력</string>
    <string name="purchase_name">구매명</string>

    <string name="desc_when_edit_category_name_change_same_category_notes">* 카테고리명을 수정할 경우 해당 카테고리의 구매노트 카테고리가 전부 변경돼요!</string>
    <string name="desc_when_delete_category_change_same_category_notes">* 카테고리를 삭제할 경우 해당 카테고리의 구매노트 카테고리가 전부 사라져요!</string>
    <string name="filter">필터</string>
    <string name="category_list">카테고리 목록</string>
    <string name="category_filter">카테고리 필터</string>
    <string name="do_apply">적용하기</string>
    <string name="reset">초기화</string>
    <string name="desc_empty_category_filters_make_purchase_note">생성된 카테고리가 없어요.\n노트를 추가해보세요!</string>
    <string name="desc_empty_category_filters_make_category">생성된 카테고리가 없어요.</string>
    <string name="will_you_delete_this_purchase_note">구매노트를\n삭제하시겠어요?</string>
    <string name="purchase_note_edit">구매노트 수정</string>
    <string name="select_category">카테고리 선택</string>
    <string name="attach_image">사진 첨부</string>
    <string name="contents">내용</string>
    <string name="write_contents">내용 작성</string>

    <string name="desc_search_info_1">검색할 특정 단어를 입력해주세요.</string>
    <string name="desc_search_info_2">예) 장소명 검색: 마트, 공원, 호텔등</string>
    <string name="desc_search_info_3">예) 지역 검색: 서울, 경기, 평창, 경주등</string>
    <string name="sort_descending">최근 날짜 순</string>
    <string name="sort_ascending">오래된 날짜 순</string>
    <string name="period_date">조회 기간</string>
    <string name="monthly">월별</string>
    <string name="one_month">1개월</string>
    <string name="three_month">3개월</string>
    <string name="input_directly">직접입력</string>
    <string name="select_month">월 선택</string>
    <string name="input_search_text">검색어를 입력해주세요</string>
    <string name="select_start_date">시작일 선택</string>
    <string name="select_end_date">종료일 선택</string>
    <string name="do_search">검색하기</string>
    <string name="price">가격</string>
    <string name="hint_input_min_price">최소 가격 입력</string>
    <string name="hint_input_max_price">최대 가격 입력</string>
    <string name="search">검색</string>
    <string name="search_purchase_note">구매노트 검색</string>
    <string name="date_period">조회 기간</string>
    <string name="recent_years_ago">최근 1년이내</string>
    <string name="hint_input_purchase_name_to_search">검색할 구매명을 입력해주세요</string>
    <string name="sort">정렬</string>
    <string name="make_with_purchase_note">구매노트 함께 작성하기</string>
    <string name="add_purchase_note">구매노트 추가</string>
    <string name="place_notes_written_this_week">이번 주에 작성한 장소노트</string>
    <string name="do_show_all">전체보기</string>
    <string name="do_more">더보기</string>
    <string name="nothing_place_note">등록된 장소노트가 없어요!</string>
    <string name="most_of_purchase_name_ranking">가장 많이 쓴 구매노트명 순위</string>
    <string name="u_can_see_max_5_purchase_name_ranking">가장 많이 쓴 구매노트명순으로 최대 5개까지 볼 수 있어요!</string>
    <string name="purchase_note_statistics">구매노트 통계</string>
    <string name="my_page">마이페이지</string>
    <string name="title_manage_category">카테고리 관리</string>
    <string name="manage_payment_method">결제수단 관리</string>
    <string name="make_payment_method">결제수단 등록</string>
    <string name="payment_method_name">결제수단명</string>
    <string name="hint_input_payment_method_name">결제수단명 혹은 별명을 입력해주세요</string>
    <string name="do_register">등록하기</string>

    <string name="desc_input_payment_method_name">* 여러 결제수단을 사용하실 경우 구분이 잘 되도록 이름을 작성해주세요.</string>
    <string name="desc_recommend_payment_method_name">이런 식으로 만들면 좋아요!</string>
    <string name="desc_payment_method_name_example1_title">은행명 + 체크/신용카드 + 카드번호 뒷자리 이용</string>
    <string name="desc_payment_method_name_example1">예) 국민 체크카드(0544), 신한 신용카드(0999)</string>
    <string name="payment_method_name_example1_highlight_text">국민 체크카드(0544), 신한 신용카드(0999)</string>

    <string name="desc_payment_method_name_example2_title">구분할 수 있는 별명</string>
    <string name="desc_payment_method_name_example2">예) 생활비카드, 용돈카드, 월급통장</string>
    <string name="payment_method_name_example2_highlight_text">생활비카드, 용돈카드, 월급통장</string>
    <string name="edit_payment_method">결제수단 수정</string>
    <string name="desc_payment_method_remove">해당 결제수단으로 등록된 구매노트가\n전부 삭제돼요!\n그래도 삭제하시겠어요?</string>
    <string name="payment_method">결제수단</string>
    <string name="payment_method_list">결제수단 목록</string>
    <string name="select_payment_method">결제수단 선택</string>
    <string name="input_category_name">카테고리명 입력</string>
    <string name="title_statistics_for_each_category">카테고리별 구매노트 통계</string>
    <string name="title_statistics_for_each_payment_method">결제수단별 구매노트 통계</string>
    <string name="manage">관리</string>
    <string name="default_payment_method">기본 결제수단</string>
    <string name="do_make_multiple">한꺼번에 작성하기</string>
    <string name="do_write">작성하기</string>
    <string name="will_register_default_payment_method">기본 결제수단으로 등록할래요!</string>
    <string name="exist_purchase_notes">이 날, 이 장소에 대한 구매노트가 있어요!</string>
    <string name="visit_other_date">다른 날에도 방문했어요!</string>
    <string name="nothing_category">카테고리 없음</string>
    <string name="nothing_payment_method">결제수단 없음</string>
    <string name="nothing_purchase_notes_about_this_category">구매노트가 없어요!</string>
    <string name="weekly_statistics">주별 통계</string>
</resources>