<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kjh.mynote.ui.common.components.MyToolBar
        android:id="@+id/tb_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:isShowBackButton="true"
        app:leftTitle="@string/edit_payment_method"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/tb_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnBottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="40dp"
            android:paddingHorizontal="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method_name"
                android:textSize="16sp"
                android:textColor="@color/black_900"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.kjh.mynote.ui.common.components.MyDefaultEditText
                android:id="@+id/et_payment_method_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/hint_input_payment_method_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_input_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/desc_input_payment_method_name"
                android:textSize="12sp"
                android:textColor="@color/black_600"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_payment_method_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_lightbulb"
                app:layout_constraintTop_toTopOf="@+id/tv_recommend_desc"
                app:layout_constraintEnd_toStartOf="@+id/tv_recommend_desc"
                app:layout_constraintBottom_toBottomOf="@+id/tv_recommend_desc" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_recommend_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_recommend_payment_method_name"
                android:textSize="18sp"
                android:textColor="@color/black_900"
                android:textStyle="bold"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_input_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Example 1 -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                app:srcCompat="@drawable/ic_info"
                app:tint="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="@+id/tv_example1_title"
                app:layout_constraintEnd_toStartOf="@+id/tv_example1_title"
                app:layout_constraintBottom_toBottomOf="@+id/tv_example1_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_example1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/desc_payment_method_name_example1_title"
                android:textSize="15sp"
                android:textColor="@color/black_700"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_recommend_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_example1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_payment_method_name_example1"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black_600"
                app:layout_constraintTop_toBottomOf="@+id/tv_example1_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Example 2 -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                app:srcCompat="@drawable/ic_info"
                app:tint="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="@+id/tv_example2_title"
                app:layout_constraintEnd_toStartOf="@+id/tv_example2_title"
                app:layout_constraintBottom_toBottomOf="@+id/tv_example2_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_example2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/desc_payment_method_name_example2_title"
                android:textSize="15sp"
                android:textColor="@color/black_700"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_example1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_example2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_payment_method_name_example2"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black_600"
                app:layout_constraintTop_toBottomOf="@+id/tv_example2_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.kjh.mynote.ui.common.components.MyBottomButton
        android:id="@+id/btnBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:btnTitle="@string/do_modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>