<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_50"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar_container"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black_800"
            android:text="@string/add_purchase_note"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="12dp"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_close_24_white"
            app:tint="@color/black_800"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">

        <!-- 구매명 -->
        <com.kjh.mynote.ui.common.components.MyTitleWithEditTextView
            android:id="@+id/et_purchase_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/purchase_name"
            app:isRequired="true"
            android:imeOptions="actionNext"
            android:hint="@string/hint_input_purchase_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- 구매 금액 -->
        <com.kjh.mynote.ui.common.components.MyTitleWithEditTextView
            android:id="@+id/et_purchase_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/purchase_price"
            app:isRequired="true"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:hint="@string/hint_input_purchase_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_purchase_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- 카테고리 -->
        <com.kjh.mynote.ui.common.components.MyTitleWithSelectableTextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/category"
            app:isRequired="true"
            app:layout_constraintTop_toBottomOf="@+id/et_purchase_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- 결제수단 -->
        <com.kjh.mynote.ui.common.components.MyTitleWithSelectableTextView
            android:id="@+id/tv_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:title="@string/payment_method"
            app:isRequired="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- 사진 첨부 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_attach_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/attach_image"
            android:textColor="@color/black_800"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_payment_method" />

        <!-- 사진 첨부 Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_attach_images"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple_shape_c_8_l_black_500"
            android:paddingVertical="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_attach_images">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_camera"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_camera_24_purple"
                app:tint="@color/black_500" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_image_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/black_500"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_camera"
                tools:text="1/3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 임시 이미지들 Layout -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_temp_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@+id/cl_attach_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cl_attach_images"
            app:layout_constraintTop_toTopOf="@+id/cl_attach_images" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.kjh.mynote.ui.common.components.MyBottomButton
        android:id="@+id/btn_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:btnTitle="@string/do_modify"
        android:background="@color/black_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>